--- a/app_students/templates/certificate/certificate_template.html
+++ b/app_students/templates/certificate/certificate_template.html
@@ -302,7 +302,7 @@
                   <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">
                      <b>
                         <span style=""
-                           >Authorized Trainer Region II Atlantic OHSA Training Ctr.# 12-00010727</span
+                           >Authorized Trainer Region II Atlantic OSHA Training Ctr.# 12-00010727</span
                         >
                      </b>
                   </p>
