--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -53,7 +53,7 @@
                                     </strong>
                                 </div>
                                 <div class="card-body">
-                                   We offer a variety of online courses for IACET credit from Board Certified Safety Professional (BCSP) Exam Prep, OSHA Hazardous Waste Operations and Emergency Response (HAZWOPER), Confined Space Training, Emergency and Fire Safety, Construction Safety, 
+                                   We offer a variety of online courses,  Certified Safety Professional (BCSP) Exam Prep, OSHA Hazardous Waste Operations and Emergency Response (HAZWOPER), Confined Space Training, Emergency and Fire Safety, Construction Safety, 
                                     Environmental Health and Safety, OSHA Construction Safety and Health, Safety Management, Scaffold Training, Fall Protection in Construction and many more please     
                                     <a href="{% url 'courses_list' %}">
                                         <strong>click here</strong>
@@ -78,53 +78,11 @@
                                 </div>
                             </div>
                             <!-- end card -->
-                            <div class="card mt-2">
-                                <div class="card-header">
-                                    <strong>
-                                        What is the IACET Continuing Education Unit (CEU)?
-                                    </strong>
-                                </div>
-                                <div class="card-body">
-                                  One IACET Continuing Education Unit (CEU) is defined as 10 contact hours of participation in an organized continuing education experience under responsible sponsorship, capable direction and qualified instruction. To check a certificate issued from us, please 
-, please
-                                    <a href="{% url 'sst_verify' %}">
-                                        <strong>click here</strong>
-                                    </a>.
-                                </div>
-                            </div>
+                           
                             <!-- end card -->
-                            <div class="card mt-2">
-                                <div class="card-header">
-                                    <strong>
-                                        Who accepts IACET CEUs?
-                                    </strong>
-                                </div>
-                                <div class="card-body">
-                                 IACET is a well-known organization that is recognized as upholding standards of excellence when it comes to continuing education, and therefore many organizations will accept IACET CEUs. Specifically, IACET CEUs are accepted by many State Boards of Engineering along with other credentialing organizations. To obtain IACET CEU, please
-
-                                    <a href="{% url 'student_registration' %}">
-                                        <strong>click here</strong>
-                                    </a>.
-                                </div>
-                            </div>
+                          
                             <!-- end card -->
-                            <div class="card mt-2">
-                                <div class="card-header">
-                                    <strong>
-                                        How can register for IACET CEU training?
-                                    </strong>
-                                </div>
-                                <div class="card-body">
-                                    You can browse our courses 
-
-                                    <a href="https://pdhsafety.com/">pdhsafety.com</a>
-                                    or, please
-                                    <a href="{% url 'student_registration' %}">
-                                        <strong>click here</strong>
-                                    </a>
-                                    to register now.
-                                </div>
-                            </div>
+                            
                             <!-- end card -->
                             <div class="card mt-2">
                                 <div class="card-header">
