--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -6,7 +6,7 @@
 
 {% block title %}Best Price Online - {{ object.title }} Course | pdhsafety.com {% endblock %}
 
-{% block meta_desc %} Best Price Online {{ object.subject }} IACET Accredited, Access 24/7 On All Devices. Easy To Take
+{% block meta_desc %} Best Price Online {{ object.subject }}, Access 24/7 On All Devices. Easy To Take
 Money Back Guarante{% endblock %}
 
 {% block meta_keywords %}
