--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -9,7 +9,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <meta
          name="description"
-         content="{% block meta_desc %}pdhsafety.com is an online learning and teaching marketplace for construction industry and other labor industries. Moreover, provides IACET CEUs credits.{% endblock %}"
+         content="{% block meta_desc %}pdhsafety.com is an online learning and teaching marketplace for construction industry and other labor industries..{% endblock %}"
       />
       <meta name="author" content="{% block meta_author %}{% endblock %}" />
       <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
