--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="{% block meta_desc %}pdhsafety.com is an online learning and teaching marketplace for construction industry and other labor industries. Moreover, provides IACET CEUs credits.{% endblock %}">
+        <meta name="description" content="{% block meta_desc %}pdhsafety.com is an online learning and teaching marketplace for construction industry and other labor industries.{% endblock %}">
         <meta name="author" content="{% block meta_author %}{% endblock %}">
         <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
         <meta name="robots" content="all">
