--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -9,13 +9,13 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-   <meta name="description" content="{% block meta_desc %} 100% Online Best Prices-Money Back Guarantee-Live Access-IACET Accredited-Access 24/7 On All Devices
+   <meta name="description" content="{% block meta_desc %} 100% Online Best Prices-Money Back Guarantee-Live Accredited-Access 24/7 On All Devices
          {% endblock %}" />
    <meta name="author" content="{% block meta_author %}{% endblock %}" />
    <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
    <meta name="robots" content="all" />
 
-   <title>{% block title %} Accredit Safety Training | pdhsafety.com {% endblock %}</title>
+   <title>{% block title %} Safety Training and Certification | pdhsafety.com {% endblock %}</title>
 
    <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
    <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
