--- a/courses/templates/courses/course/list_v2.html
+++ b/courses/templates/courses/course/list_v2.html
@@ -5,7 +5,7 @@
 
 {% block title %}
 {% if subject %} Best {{ subject.title }} Courses Online | pdhsafety.com {%else%}
-Best Accredit Safety Training Courses Online | pdhsafety.com
+Best Safety Training and Certification Courses Online | pdhsafety.com
 {% endif %}
 {% endblock %}
 
