--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -235,7 +235,7 @@ async defer>
                e.stopPropagation();
                var isValid = $("#fmContact").valid();
                if(isValid && isGoogleValid) {
-                //  $("#fmContact").submit();
+                  $("#fmContact").submit();
                }
 
                if(isValid&& !isGoogleValid) {
