--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -271,7 +271,7 @@ async defer>
       };
 
       var verifyCallback = function(response) {
-         isGoogleValid = false;
+         isGoogleValid = true;
        };
     </script>
 
