--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -54,7 +54,7 @@
          </div>
 
          <div class="col-lg-8">
-            <form class="contact__form" method="POST" action="./" id="fmContact">
+            <form class="contact__form d-none" method="POST" action="./" id="fmContact">
                {% csrf_token %}
 
                <div class="row">
