--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -110,7 +110,9 @@
                               {% if request.user.is_authenticated %}
                               <a href="#">Welcome, {{ request.user.first_name }}</a>
                               {% else %}
-                              <a href="{% url 'student_registration' %}" aria-label="Register">Register</a>
+                              <a href="{% url 'company_registration' %}" aria-label="Company">Business Account</a> 
+                              <span style="font-weight: 700;color: #ff1949;font-size: 18px;">||</span>
+                              <a href="{% url 'student_registration' %}" aria-label="Register">Student Register</a>
                               {% endif %}
                            </li>
                         </ul>
@@ -122,6 +124,9 @@
                         {% endif %} {% if request.user.is_student == True %}
                         <a href="{% url 'student_dashboard' %}" class="btn btn-main btn-small"
                            aria-label="Student Dashboard">Student Dashboard</a>
+                           {% endif %} {% if request.user.is_business == True %}
+                           <a href="{% url 'business_dashboard' %}" class="btn btn-main btn-small"
+                              aria-label="Business Dashboard">My Dashboard</a>
                         {% endif %} {% if request.user.is_superuser == True %}
                         <a href="{% url 'admin_dashboard' %}" class="btn btn-main btn-small"
                            aria-label="Admin Dashboard">Admin Dashboard</a>
