--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -110,8 +110,7 @@
                               {% if request.user.is_authenticated %}
                               <a href="#">Welcome, {{ request.user.first_name }}</a>
                               {% else %}
-                              <a href="{% url 'company_registration' %}" aria-label="Company">Business Account</a> 
-                              <span style="font-weight: 700;color: #ff1949;font-size: 18px;">||</span>
+                             
                               <a href="{% url 'student_registration' %}" aria-label="Register">Student Register</a>
                               {% endif %}
                            </li>
@@ -285,13 +284,7 @@
                <div class="widget footer-widget mb-5 mb-lg-0">
                   <h5 class="widget-title">About Us</h5>
                   <p class="mt-3">
-                     NYC Construction Safety Training aims to offer quality training that is relevant and useful for the
-                     construction industry.
-                     These efforts include offering training courses that are useful and/or necessary to achieve success
-                     and career outcomes in the
-                     construction industry where course material may be useful and applicable, perperpetual reviews of
-                     training materials for
-                     accuracy and relevance, and development of quality staff and instructors. instructors..
+                     NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are essential for achieving success and career outcomes in the construction industry, ensuring that course material is both useful and applicable. We conduct perpetual reviews of training materials to maintain accuracy and relevance, and we are committed to developing a team of high-quality staff and instructors.
                   </p>
                   <ul class="list-inline footer-socials">
                      <li class="list-inline-item">
@@ -336,7 +329,9 @@
                      <li>
                         <a  href="{% url 'student_registration' %}">Register</a>
                      </li>
-
+                     <li>
+                        <a  href="{% url 'company_registration' %}">Business Register</a>
+                     </li>
                     
                      {% endif %}
 
